test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/external_var_scoping_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[61]:
  int
  identifier(x)
  =
  const int(10)
  ;
  int
  identifier(read_x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  if
  (
  identifier(x)
  ==
  const int(0)
  )
  {
  if
  (
  identifier(read_x)
  (
  )
  !=
  const int(10)
  )
  return
  const int(1)
  ;
  extern
  int
  identifier(x)
  ;
  if
  (
  identifier(x)
  !=
  const int(10)
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
