test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/redeclare_fun_as_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  extern
  int
  identifier(foo)
  ;
  return
  const int(0)
  ;
  }
